# psgd_jax

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
psgd_jax/: __init__.py  affine.py  distributed_affine.py  kron.py  low_rank_approximation.py  psgd_test.py  utils.py  xmat.py
psgd_jax/image_classification/: imagenet_pipeline.py  network_utils.py  sweep.yaml  tf_preprocessing_tools.py  train.py  training_utils.py
psgd_jax/image_classification/models/: ViT.py  resnet.py
psgd_jax/optimization_experiments/: __init__.py  rosenbrock.py  xor.py
psgd_jax/optimizers/: create_optimizer.py  first_order_optimizers.py  optimizer_utils.py  psgd.py  psgd_test.py  quantization_utils.py  shampoo_caspr.py  sophia.py
